dist15/AppParser.py
# Generated from ./antlr4/App.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class AppParser ( Parser ):

    grammarFileName = "App.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'TIME'", "'INT'", "'FORCE'", "'OBJECT'", 
                     "'FLOAT'", "'_'", "'-'", "'.'", "':'", "'['", "','", 
                     "']'", "'('", "')'", "'APPLY'", "'TO'", "'FOR'", "'DELAY'", 
                     "';'", "'+'", "'/'", "'*'", "'DEFINE'", "'AS'", "'SET'", 
                     "'IF'", "'THEN'", "'ENDIF'", "'=='", "'>'", "'<'", 
                     "'>='", "'<='", "'!='", "'PARALLEL'", "'ENDPARALLEL'", 
                     "'LOOP'", "'ENDLOOP'", "'DEFINE FUNCTION'", "'->'", 
                     "'ENDFUNCTION'", "'/*'", "'*/'", "'::'", "'{'", "'}'", 
                     "'ANGLE BETWEEN'", "'COORDINATE'", "'X'", "'Y'", "'OF'", 
                     "'DISTANCE BETWEEN'", "'VELOCITY'", "'VALUE'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'0'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "WS", "LOWERCASELETTER", 
                      "UPPERCASELETTER", "NONZERODIGIT", "ZERO" ]

    RULE_primaryExpression = 0
    RULE_instruction = 1
    RULE_variableType = 2
    RULE_variableName = 3
    RULE_functionName = 4
    RULE_integer = 5
    RULE_float_type = 6
    RULE_time_type = 7
    RULE_force_type = 8
    RULE_object_type = 9
    RULE_applyForce = 10
    RULE_arithmeticalExpression = 11
    RULE_declaration = 12
    RULE_definition = 13
    RULE_conditionalStatement = 14
    RULE_condition = 15
    RULE_conditionBody = 16
    RULE_parallelExpression = 17
    RULE_parallelBody = 18
    RULE_loop = 19
    RULE_loopBody = 20
    RULE_functionCall = 21
    RULE_functionDeclaration = 22
    RULE_functionBody = 23
    RULE_functionArgs = 24
    RULE_functionParams = 25
    RULE_functionArgument = 26
    RULE_comment = 27
    RULE_scopeName = 28
    RULE_scopeSequence = 29
    RULE_scopeDeclaration = 30
    RULE_whiteSpace = 31
    RULE_getAngle = 32
    RULE_getCoordinate = 33
    RULE_getDistance = 34
    RULE_getVelocity = 35

    ruleNames =  [ "primaryExpression", "instruction", "variableType", "variableName", 
                   "functionName", "integer", "float_type", "time_type", 
                   "force_type", "object_type", "applyForce", "arithmeticalExpression", 
                   "declaration", "definition", "conditionalStatement", 
                   "condition", "conditionBody", "parallelExpression", "parallelBody", 
                   "loop", "loopBody", "functionCall", "functionDeclaration", 
                   "functionBody", "functionArgs", "functionParams", "functionArgument", 
                   "comment", "scopeName", "scopeSequence", "scopeDeclaration", 
                   "whiteSpace", "getAngle", "getCoordinate", "getDistance", 
                   "getVelocity" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    WS=55
    LOWERCASELETTER=56
    UPPERCASELETTER=57
    NONZERODIGIT=58
    ZERO=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PrimaryExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AppParser.FunctionDeclarationContext)
            else:
                return self.getTypedRuleContext(AppParser.FunctionDeclarationContext,i)


        def instruction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AppParser.InstructionContext)
            else:
                return self.getTypedRuleContext(AppParser.InstructionContext,i)


        def scopeDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AppParser.ScopeDeclarationContext)
            else:
                return self.getTypedRuleContext(AppParser.ScopeDeclarationContext,i)


        def whiteSpace(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AppParser.WhiteSpaceContext)
            else:
                return self.getTypedRuleContext(AppParser.WhiteSpaceContext,i)


        def getRuleIndex(self):
            return AppParser.RULE_primaryExpression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrimaryExpression" ):
                listener.enterPrimaryExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrimaryExpression" ):
                listener.exitPrimaryExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrimaryExpression" ):
                return visitor.visitPrimaryExpression(self)
            else:
                return visitor.visitChildren(self)




    def primaryExpression(self):

        localctx = AppParser.PrimaryExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_primaryExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==AppParser.WS:
                    self.state = 72
                    self.whiteSpace()


                self.state = 78
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 75
                    self.functionDeclaration()
                    pass

                elif la_ == 2:
                    self.state = 76
                    self.instruction()
                    pass

                elif la_ == 3:
                    self.state = 77
                    self.scopeDeclaration()
                    pass


                self.state = 81
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                if la_ == 1:
                    self.state = 80
                    self.whiteSpace()


                self.state = 85 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AppParser.T__14) | (1 << AppParser.T__22) | (1 << AppParser.T__24) | (1 << AppParser.T__25) | (1 << AppParser.T__34) | (1 << AppParser.T__36) | (1 << AppParser.T__38) | (1 << AppParser.T__41) | (1 << AppParser.WS) | (1 << AppParser.LOWERCASELETTER) | (1 << AppParser.UPPERCASELETTER))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(AppParser.DeclarationContext,0)


        def definition(self):
            return self.getTypedRuleContext(AppParser.DefinitionContext,0)


        def conditionalStatement(self):
            return self.getTypedRuleContext(AppParser.ConditionalStatementContext,0)


        def parallelExpression(self):
            return self.getTypedRuleContext(AppParser.ParallelExpressionContext,0)


        def loop(self):
            return self.getTypedRuleContext(AppParser.LoopContext,0)


        def functionCall(self):
            return self.getTypedRuleContext(AppParser.FunctionCallContext,0)


        def applyForce(self):
            return self.getTypedRuleContext(AppParser.ApplyForceContext,0)


        def comment(self):
            return self.getTypedRuleContext(AppParser.CommentContext,0)


        def getRuleIndex(self):
            return AppParser.RULE_instruction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInstruction" ):
                listener.enterInstruction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInstruction" ):
                listener.exitInstruction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction" ):
                return visitor.visitInstruction(self)
            else:
                return visitor.visitChildren(self)




    def instruction(self):

        localctx = AppParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_instruction)
        try:
            self.state = 95
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AppParser.T__22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.declaration()
                pass
            elif token in [AppParser.T__24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.definition()
                pass
            elif token in [AppParser.T__25]:
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.conditionalStatement()
                pass
            elif token in [AppParser.T__34]:
                self.enterOuterAlt(localctx, 4)
                self.state = 90
                self.parallelExpression()
                pass
            elif token in [AppParser.T__36]:
                self.enterOuterAlt(localctx, 5)
                self.state = 91
                self.loop()
                pass
            elif token in [AppParser.LOWERCASELETTER, AppParser.UPPERCASELETTER]:
                self.enterOuterAlt(localctx, 6)
                self.state = 92
                self.functionCall()
                pass
            elif token in [AppParser.T__14]:
                self.enterOuterAlt(localctx, 7)
                self.state = 93
                self.applyForce()
                pass
            elif token in [AppParser.T__41]:
                self.enterOuterAlt(localctx, 8)
                self.state = 94
                self.comment()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return AppParser.RULE_variableType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableType" ):
                listener.enterVariableType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableType" ):
                listener.exitVariableType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableType" ):
                return visitor.visitVariableType(self)
            else:
                return visitor.visitChildren(self)




    def variableType(self):

        localctx = AppParser.VariableTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_variableType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AppParser.T__0) | (1 << AppParser.T__1) | (1 << AppParser.T__2) | (1 << AppParser.T__3) | (1 << AppParser.T__4))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariableNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.scope_seq = None # ScopeSequenceContext

        def LOWERCASELETTER(self, i:int=None):
            if i is None:
                return self.getTokens(AppParser.LOWERCASELETTER)
            else:
                return self.getToken(AppParser.LOWERCASELETTER, i)

        def scopeSequence(self):
            return self.getTypedRuleContext(AppParser.ScopeSequenceContext,0)


        def UPPERCASELETTER(self, i:int=None):
            if i is None:
                return self.getTokens(AppParser.UPPERCASELETTER)
            else:
                return self.getToken(AppParser.UPPERCASELETTER, i)

        def NONZERODIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(AppParser.NONZERODIGIT)
            else:
                return self.getToken(AppParser.NONZERODIGIT, i)

        def ZERO(self, i:int=None):
            if i is None:
                return self.getTokens(AppParser.ZERO)
            else:
                return self.getToken(AppParser.ZERO, i)

        def getRuleIndex(self):
            return AppParser.RULE_variableName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariableName" ):
                listener.enterVariableName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariableName" ):
                listener.exitVariableName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVariableName" ):
                return visitor.visitVariableName(self)
            else:
                return visitor.visitChildren(self)




    def variableName(self):

        localctx = AppParser.VariableNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variableName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AppParser.UPPERCASELETTER:
                self.state = 99
                localctx.scope_seq = self.scopeSequence()


            self.state = 102
            self.match(AppParser.LOWERCASELETTER)
            self.state = 106
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 103
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AppParser.T__5) | (1 << AppParser.LOWERCASELETTER) | (1 << AppParser.UPPERCASELETTER) | (1 << AppParser.NONZERODIGIT) | (1 << AppParser.ZERO))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume() 
                self.state = 108
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LOWERCASELETTER(self, i:int=None):
            if i is None:
                return self.getTokens(AppParser.LOWERCASELETTER)
            else:
                return self.getToken(AppParser.LOWERCASELETTER, i)

        def UPPERCASELETTER(self, i:int=None):
            if i is None:
                return self.getTokens(AppParser.UPPERCASELETTER)
            else:
                return self.getToken(AppParser.UPPERCASELETTER, i)

        def NONZERODIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(AppParser.NONZERODIGIT)
            else:
                return self.getToken(AppParser.NONZERODIGIT, i)

        def ZERO(self, i:int=None):
            if i is None:
                return self.getTokens(AppParser.ZERO)
            else:
                return self.getToken(AppParser.ZERO, i)

        def getRuleIndex(self):
            return AppParser.RULE_functionName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionName" ):
                listener.enterFunctionName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionName" ):
                listener.exitFunctionName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionName" ):
                return visitor.visitFunctionName(self)
            else:
                return visitor.visitChildren(self)




    def functionName(self):

        localctx = AppParser.FunctionNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_functionName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(AppParser.LOWERCASELETTER)
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AppParser.T__5) | (1 << AppParser.LOWERCASELETTER) | (1 << AppParser.UPPERCASELETTER) | (1 << AppParser.NONZERODIGIT) | (1 << AppParser.ZERO))) != 0):
                self.state = 110
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AppParser.T__5) | (1 << AppParser.LOWERCASELETTER) | (1 << AppParser.UPPERCASELETTER) | (1 << AppParser.NONZERODIGIT) | (1 << AppParser.ZERO))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntegerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NONZERODIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(AppParser.NONZERODIGIT)
            else:
                return self.getToken(AppParser.NONZERODIGIT, i)

        def ZERO(self, i:int=None):
            if i is None:
                return self.getTokens(AppParser.ZERO)
            else:
                return self.getToken(AppParser.ZERO, i)

        def getRuleIndex(self):
            return AppParser.RULE_integer

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInteger" ):
                listener.enterInteger(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInteger" ):
                listener.exitInteger(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInteger" ):
                return visitor.visitInteger(self)
            else:
                return visitor.visitChildren(self)




    def integer(self):

        localctx = AppParser.IntegerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_integer)
        self._la = 0 # Token type
        try:
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AppParser.NONZERODIGIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.match(AppParser.NONZERODIGIT)
                self.state = 120
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 117
                        _la = self._input.LA(1)
                        if not(_la==AppParser.NONZERODIGIT or _la==AppParser.ZERO):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume() 
                    self.state = 122
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

                pass
            elif token in [AppParser.ZERO]:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.match(AppParser.ZERO)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Float_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.minus = None # Token

        def NONZERODIGIT(self, i:int=None):
            if i is None:
                return self.getTokens(AppParser.NONZERODIGIT)
            else:
                return self.getToken(AppParser.NONZERODIGIT, i)

        def ZERO(self, i:int=None):
            if i is None:
                return self.getTokens(AppParser.ZERO)
            else:
                return self.getToken(AppParser.ZERO, i)

        def getRuleIndex(self):
            return AppParser.RULE_float_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFloat_type" ):
                listener.enterFloat_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFloat_type" ):
                listener.exitFloat_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFloat_type" ):
                return visitor.visitFloat_type(self)
            else:
                return visitor.visitChildren(self)




    def float_type(self):

        localctx = AppParser.Float_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_float_type)
        self._la = 0 # Token type
        try:
            self.state = 151
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AppParser.T__6, AppParser.NONZERODIGIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 127
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==AppParser.T__6:
                    self.state = 126
                    localctx.minus = self.match(AppParser.T__6)


                self.state = 129
                self.match(AppParser.NONZERODIGIT)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==AppParser.NONZERODIGIT or _la==AppParser.ZERO:
                    self.state = 130
                    _la = self._input.LA(1)
                    if not(_la==AppParser.NONZERODIGIT or _la==AppParser.ZERO):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 135
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 136
                self.match(AppParser.T__7)
                self.state = 140
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 137
                        _la = self._input.LA(1)
                        if not(_la==AppParser.NONZERODIGIT or _la==AppParser.ZERO):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume() 
                    self.state = 142
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

                pass
            elif token in [AppParser.ZERO]:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.match(AppParser.ZERO)
                self.state = 144
                self.match(AppParser.T__7)
                self.state = 148
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,13,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 145
                        _la = self._input.LA(1)
                        if not(_la==AppParser.NONZERODIGIT or _la==AppParser.ZERO):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume() 
                    self.state = 150
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,13,self._ctx)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Time_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def integer(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AppParser.IntegerContext)
            else:
                return self.getTypedRuleContext(AppParser.IntegerContext,i)


        def getRuleIndex(self):
            return AppParser.RULE_time_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTime_type" ):
                listener.enterTime_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTime_type" ):
                listener.exitTime_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTime_type" ):
                return visitor.visitTime_type(self)
            else:
                return visitor.visitChildren(self)




    def time_type(self):

        localctx = AppParser.Time_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_time_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.integer()
            self.state = 154
            self.match(AppParser.T__8)
            self.state = 155
            self.integer()
            self.state = 156
            self.match(AppParser.T__8)
            self.state = 157
            self.integer()
            self.state = 158
            self.match(AppParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Force_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.angle = None # IntegerContext
            self.power = None # IntegerContext

        def integer(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AppParser.IntegerContext)
            else:
                return self.getTypedRuleContext(AppParser.IntegerContext,i)


        def getRuleIndex(self):
            return AppParser.RULE_force_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForce_type" ):
                listener.enterForce_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForce_type" ):
                listener.exitForce_type(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForce_type" ):
                return visitor.visitForce_type(self)
            else:
                return visitor.visitChildren(self)




    def force_type(self):
